--- a/rg_document_db.yml
+++ b/rg_document_db.yml
@@ -76,6 +76,9 @@ Resources:
            CidrIp: !Ref AccessFromCidr
            FromPort: 27017
            ToPort: 27017
+      SecurityGroupEgress:  # Adding egress rule
+        - IpProtocol: "-1"  # Allow all protocols
+          CidrIp: 0.0.0.0/0  # Allow all outbound traffic to all destinations     
       Tags:
         - Key: Name
           Value: !Ref SecurityGroupName
@@ -90,6 +93,9 @@ Resources:
            FromPort: "0"
            ToPort: "65535"
            CidrIp : "0.0.0.0/0"
+      SecurityGroupEgress:  # Adding egress rule
+        - IpProtocol: "-1"  # Allow all protocols
+          CidrIp: 0.0.0.0/0  # Allow all outbound traffic to all destinations     
       Tags:
         - Key: Name
           Value: !Ref VpceSecurityGroupName        
@@ -152,6 +158,27 @@ Resources:
       DBInstanceIdentifier: !Ref DBInstanceName
       DBInstanceClass: !Ref DBInstanceClass
     DependsOn: DBCluster
+    Tags:
+      - Key: CostCenter
+        Value: PG000000
+      - Key: CriticalityTier
+        Value: Business Operational
+      - Key: Compliance
+        Value: HIPAA
+      - Key: Environment
+        Value: QA
+      - Key: ApplicationName
+        Value: ResearchGatewayQA
+      - Key: Department
+        Value: DataScience
+      - Key: ApplicationCustodian
+        Value: txs908
+      - Key: ServiceNow
+        Value: XXX
+      - Key: DepartmentEmail
+        Value: txs908@miami.edu
+      - Key: UHITOwner
+        Value: txs908      
   SecretDocDBClusterAttachment:
     Type: AWS::SecretsManager::SecretTargetAttachment
     Properties:
