--- a/rg-alb-route53.yml
+++ b/rg-alb-route53.yml
@@ -46,10 +46,7 @@ Resources:
         FromPort: 443
         ToPort: 443
         CidrIp: 0.0.0.0/0
-      - IpProtocol: tcp
-        FromPort: 22
-        ToPort: 22
-        CidrIp: 0.0.0.0/0
+     
     SecurityGroupEgress:  # Adding egress rule
         - IpProtocol: "-1"  # Allow all protocols
           CidrIp: 0.0.0.0/0  # Allow all outbound traffic to all destinations    
@@ -73,9 +70,9 @@ Resources:
               - Key: Compliance
                 Value: HIPAA
               - Key: Environment
-                Value: QA
+                Value: PROD
               - Key: ApplicationName
-                Value: ResearchGatewayQA
+                Value: ResearchGatewayProd
               - Key: Department
                 Value: DataScience
               - Key: ApplicationCustodian
@@ -112,9 +109,9 @@ Resources:
               - Key: Compliance
                 Value: HIPAA
               - Key: Environment
-                Value: QA
+                Value: PROD
               - Key: ApplicationName
-                Value: ResearchGatewayQA
+                Value: ResearchGatewayProd
               - Key: Department
                 Value: DataScience
               - Key: ApplicationCustodian
@@ -152,9 +149,9 @@ Resources:
               - Key: Compliance
                 Value: HIPAA
               - Key: Environment
-                Value: QA
+                Value: PROD
               - Key: ApplicationName
-                Value: ResearchGatewayQA
+                Value: ResearchGatewayProd
               - Key: Department
                 Value: DataScience
               - Key: ApplicationCustodian
