--- a/cft-templates/ec2-secure-desktop.yml
+++ b/cft-templates/ec2-secure-desktop.yml
@@ -90,7 +90,7 @@ Resources:
             Resource: '*'
           - Effect: Allow
             Action:
-              - 'ssm:*'
+              - 'ssm:*'i
             Resource: '*'
           - Effect: Deny
             NotAction:
