--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ version: "3.1"
 services:
   web:
     image: nginx:latest
+    security_opt:
+      - no-new-privileges:true 
     ports:
       - "80:80"
     volumes:
@@ -19,6 +21,8 @@ services:
 
   cc-3102:
     image: 045938549113.dkr.ecr.us-east-2.amazonaws.com/researchportal:_fd_1.21.0_b2046
+    security_opt:
+      - no-new-privileges:true
     secrets:
       - source: sp2prod-config.json
         target: /rlc/cc/server/app/config/config.json
@@ -43,6 +47,8 @@ services:
     
   scheduler-3102:
     image: 045938549113.dkr.ecr.us-east-2.amazonaws.com/researchportal:_fd_1.21.0_b2046
+    security_opt:
+      - no-new-privileges:true
     secrets:
       - source: sp2prod-config.json
         target: /rlc/cc/server/app/config/config.json
@@ -63,6 +69,8 @@ services:
 
   notificationsink:
     image: 045938549113.dkr.ecr.us-east-2.amazonaws.com/notificationsink:1.19.0_b2
+    security_opt:
+      - no-new-privileges:true
     secrets:
       - source: sp2prod-config.json
         target: /opt/app/config/config.json
