Corrected bug in EgressNotificationBucket

--- a/SRE/Egress/Setup-templates/egressresources.yml
+++ b/SRE/Egress/Setup-templates/egressresources.yml
@@ -290,8 +290,8 @@ Resources:
             Principal: "*"
             Action: s3:*
             Resource:
-              - !Join ["/", [!GetAtt EgressStoreBucket.Arn, "*"]]
-              - !GetAtt EgressStoreBucket.Arn
+              - !Join ["/", [!GetAtt EgressNotificationBucket.Arn, "*"]]
+              - !GetAtt EgressNotificationBucket.Arn
             Condition:
               NumericLessThan:
                 's3:TLSVersion': '1.2' 
