--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,11 @@ services:
     security_opt:
       - no-new-privileges:true 
     ports:
-      - "80:80"
+      - "443:443"
     volumes:
       - ${PWD}/nginx.conf:/etc/nginx/conf.d/default.conf
       - ${PWD}/integrations:/etc/nginx/myfiles
+      - ${PWD}/nginx/ssl/:/etc/nginx/ssl/
     networks:
       - sp2net
 
