--- a/rg-alb-route53.yml
+++ b/rg-alb-route53.yml
@@ -167,10 +167,10 @@ Resources:
         Properties:
             HealthCheckIntervalSeconds: 30
             HealthCheckPath: "/"
-            Port: 80
-            Protocol: "HTTP"
+            Port: 443
+            Protocol: "HTTPS"
             HealthCheckPort: "traffic-port"
-            HealthCheckProtocol: "HTTP"
+            HealthCheckProtocol: "HTTPS"
             HealthCheckTimeoutSeconds: 5
             UnhealthyThresholdCount: 2
             TargetType: "instance"
@@ -187,8 +187,8 @@ Resources:
             DefaultActions:
               - Type: "forward"
                 TargetGroupArn: !Ref RGTargetGroup
-            Port: 80
-            Protocol: "HTTP"
+            Port: 443
+            Protocol: "HTTPS"
             LoadBalancerArn: !Ref RGApplicationLoadBalancer
            
 Outputs:        
