--- a/cft-templates/ec2-advanced-winsecure-desktop.yml
+++ b/cft-templates/ec2-advanced-winsecure-desktop.yml
@@ -50,7 +50,7 @@ Parameters:
   EBSVolumeSize:
     Description: The initial size of the volume (in GBs)  EBS will use for storage.
     Type: Number
-    Default: 32
+    Default: 64
 
 Conditions:
   IamPolicyEmpty: !Equals [!Ref IamPolicyDocument, '{}']
@@ -149,7 +149,10 @@ Resources:
     CreationPolicy:
       ResourceSignal:
         Timeout: "PT15M"   
-    Properties:           
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateName: "RG-IMDSv2"
+        Version: 1             
       UserData:
         Fn::Base64: !Sub |
           <powershell>     
@@ -176,30 +179,7 @@ Resources:
           
       InstanceType: !Ref 'InstanceType'
       ImageId: ami-03cb188048b457a84
-      IamInstanceProfile: !Ref InstanceProfile
-      Tags:
-        - Key: CostCenter
-          Value: PG000000
-        - Key: CriticalityTier
-          Value: Business Operational
-        - Key: Compliance
-          Value: HIPAA
-        - Key: Environment
-          Value: QA
-        - Key: ApplicationName
-          Value: ResearchGatewayQA
-        - Key: Department
-          Value: DataScience
-        - Key: ApplicationCustodian
-          Value: txs908
-        - Key: ServiceNow
-          Value: XXX
-        - Key: DepartmentEmail
-          Value: txs908@miami.edu
-        - Key: UHITOwner
-          Value: txs908       
-            
-
+      IamInstanceProfile: !Ref InstanceProfile     
       BlockDeviceMappings:
         - DeviceName: /dev/sda1
           Ebs:
@@ -263,4 +243,4 @@ Outputs:
  
   AvailabilityZone: 
     Description: AvailabilityZone of newly created EC2 instance
-    Value: !GetAtt [EC2Instance, AvailabilityZone]  
+    Value: !GetAtt [EC2Instance, AvailabilityZone]
