--- a/cft-templates/ec2-winsecure-desktop.yml
+++ b/cft-templates/ec2-winsecure-desktop.yml
@@ -43,14 +43,13 @@ Parameters:
       [
         t3.medium,
         t3.large,
-        t3.xlarge,
-      
+        t3.xlarge
       ]
     ConstraintDescription: must be a valid EC2 instance type.
   EBSVolumeSize:
     Description: The initial size of the volume (in GBs)  EBS will use for storage.
     Type: Number
-    Default: 32
+    Default: 64
 
 Conditions:
   IamPolicyEmpty: !Equals [!Ref IamPolicyDocument, '{}']
@@ -149,7 +148,10 @@ Resources:
     CreationPolicy:
       ResourceSignal:
         Timeout: "PT15M"   
-    Properties:           
+    Properties:
+      LaunchTemplate:
+        LaunchTemplateName: "RG-IMDSv2"
+        Version: 1              
       UserData:
         Fn::Base64: !Sub |
           <powershell>     
@@ -177,29 +179,6 @@ Resources:
       InstanceType: !Ref 'InstanceType'
       ImageId: ami-03cb188048b457a84
       IamInstanceProfile: !Ref InstanceProfile
-      Tags:
-        - Key: CostCenter
-          Value: PG000000
-        - Key: CriticalityTier
-          Value: Business Operational
-        - Key: Compliance
-          Value: HIPAA
-        - Key: Environment
-          Value: QA
-        - Key: ApplicationName
-          Value: ResearchGatewayQA
-        - Key: Department
-          Value: DataScience
-        - Key: ApplicationCustodian
-          Value: txs908
-        - Key: ServiceNow
-          Value: XXX
-        - Key: DepartmentEmail
-          Value: txs908@miami.edu
-        - Key: UHITOwner
-          Value: txs908       
-            
-
       BlockDeviceMappings:
         - DeviceName: /dev/sda1
           Ebs:
@@ -263,4 +242,4 @@ Outputs:
  
   AvailabilityZone: 
     Description: AvailabilityZone of newly created EC2 instance
-    Value: !GetAtt [EC2Instance, AvailabilityZone]  
+    Value: !GetAtt [EC2Instance, AvailabilityZone]
