--- a/cft-templates/s3.yaml
+++ b/cft-templates/s3.yaml
@@ -8,11 +8,7 @@ Parameters:
   AccessLoggingBucketName:
     Type: String
     Description: "Pass the bucket name where Access Logs for this S3 bucket should be sent"
-    Default: ""
-  AccessLoggingBucketPrefix:
-    Type: String
-    Description: "Pass the bucket prefix where Access Logs for this S3 bucket should be sent"
-    Default: "/"
+
 
 Conditions:
   AccessLoggingEnabled:
@@ -35,7 +31,7 @@ Resources:
         Fn::If:
           - AccessLoggingEnabled
           - DestinationBucketName: !Ref AccessLoggingBucketName
-            LogFilePrefix: !Ref AccessLoggingBucketPrefix
+            LogFilePrefix: !Ref Namespace
           - !Ref "AWS::NoValue"
 
   BucketPolicy:
